<resources>
    <string name="app_name">Store</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">اطلاعات کاربری</string>
    <string name="lasted"> جدیدترین</string>
    <string name="popular"> محبوب ترین ها</string>
    <string name="viewAll"> مشاهده همه</string>
    <string name="dis">این کتونی شدیدا برای دویدن و راه رفتن مناسب هست و تقریبا. هیچ فشار مخربی رو نمیذارد به پا و زانوان شما انتقال داده شود</string>
    <string name="comments">نظرات کاربران</string>
    <string name="insertComment">ثبت نظر</string>
    <string name="viewAllComments">مشاهده همه نظرات</string>
    <string name="productList">لیست محصولات</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortLatest">جدیدترین محصولات</string>
    <string name="sortPopular">پربازدیدترین</string>
    <string name="sortPriceHighToLow">گران ترین</string>
    <string name="sortPriceLowToHigh">ارزان ترین</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="unknown_error">خطای نامشخص </string>
    <string name="success_addToCart">به سبد خرید اضافه شد  </string>
    <string name="loginScreenTitle">ورود به حساب کاربری  </string>
    <string name="loginTitle">ورود   </string>
    <string name="email">ایمیل  </string>
    <string name="password">رمز عبور  </string>
    <string name="signupHint">حساب کاربری ندارید ؟ </string>
    <string name="signup">ثبت نام</string>
    <string name="authHint">ایمیل و رمز عبور خود را وارد کنید </string>
    <string name="signupScreenTitle">ایجاد حساب کاربری </string>
    <string name="loginHint">قبلا ثبت نام کردید؟ </string>
    <string name="pay">پرداخت</string>
    <string name="count">تعداد</string>
    <string name="removeFromCart">حذف از سبد خرید</string>
    <string name="purchaseDetail">جزییات خرید</string>
    <string name="totalPrice">مبلغ کل خرید</string>
    <string name="shippingPrice"> هزینه ارسال</string>
    <string name="payablePrice">  مبلغ قابل پرداخت</string>


    <string name="cartEmptyStateLoginRequired">وارد حساب کاربری خود شوید</string>
    <string name="cartEmptyStateCallToAction">   ورود به حساب کاربری </string>
    <string name="cartEmptyState">   هیچ خبری اینجا نیست !!! </string>
    <string name="shippingToolbarTitle">   انتخاب تحویل گیرنده و شیوه پرداخت  </string>
    <string name="onlinePayment">پرداخت اینترنتی</string>
    <string name="cashOnDelivery">پرداخت در محل</string>


    <string name="fistName">نام</string>
    <string name="lastName">نام خانوادگی </string>
    <string name="postalCode">کد پستی</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="address"> ادرس</string>

    <string name="checkoutToolbarTitle">رسید پرداخت</string>
    <string name="returnHome"> بازگشت به صفحه اصلی</string>
    <string name="orderHistory"> سوابق سفارش </string>
    <string name="purchaseStatus">وضعیت سفارش</string>
    <string name="price">مبلغ</string>
    <string name="favorite">لیست علاقه مندی ها</string>
    <string name="signOut">خروج از حساب کاربری</string>
    <string name="guest_user">کاربر مهمان</string>
    <string name="favorite_help_message">برای حذف محصول انگشت خود را روی ان نگه دارید</string>
    <string name="favoriteEmptyStateMessage"> هنوز محصولی به لیست علاقه مندی اضافه نکردی</string>

    <string-array name="sortTitleArray">
        <item>@string/sortLatest</item>
        <item>@string/sortPopular</item>
        <item>@string/sortPriceHighToLow</item>
        <item>@string/sortPriceLowToHigh</item>
    </string-array>
</resources>