<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            style="@style/TextAppearance.MyTheme.Headline5"
            android:text="@string/signupScreenTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha=".8"
            style="?textAppearanceBody1"
            android:text="@string/authHint"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:gravity="right|center_vertical"
            android:inputType="textEmailAddress"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="right|center_vertical"
            style="@style/Theme.Nike.AuthTheme.EditText"

            android:layout_marginTop="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupBtn"
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/signup"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".4"
            style="?textAppearanceBody1"
            android:text="@string/loginHint"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginLinkBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/loginScreenTitle"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>