<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:strokeColor="?dividerColor"
            app:strokeWidth="1dp"
            android:scaleType="centerInside"
            app:shapeAppearance="@style/Avatar"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_nike_logo"/>
        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="کاربر مهمان"
            style="?textAppearanceBody1"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/shape_divider"
            android:showDividers="middle|beginning|end"
            android:layout_marginTop="32dp">
            <TextView
                android:id="@+id/favoriteProductsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                style="@style/ProfileLinks"
                app:drawableEndCompat="@drawable/ic_favorites_24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderHistory"
                style="@style/ProfileLinks"
                app:drawableEndCompat="@drawable/ic_order_history" />
            <TextView
                android:id="@+id/authBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginScreenTitle"
                style="@style/ProfileLinks"
                app:drawableEndCompat="@drawable/ic_sign_in" />

        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>