<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_nike_logo" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/background_et_search"
                    android:hint="جستجو"
                    android:paddingStart="16dp"
                    android:paddingEnd="54dp"
                    android:textColor="?colorOnSurface"
                    android:textColorHint="?android:textColorSecondary"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="38dp"
                    android:src="@drawable/ic_search" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/bannerSliderViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="12dp"
                    app:dotsColor="#E0DCDC"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="5dp"
                    app:dotsSpacing="3dp"
                    app:dotsWidthFactor="4"
                    app:progressMode="false"
                    app:selectedDotColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lasted"
                    android:layout_gravity="end|center_vertical"
                    style="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewLatestProductBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewAll"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center_vertical|start"/>


            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/latestProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:clipToPadding="false"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:layout_gravity="end|center_vertical"
                    style="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary"/>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewAll"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center_vertical|start"/>


            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:clipToPadding="false"/>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>